--- a/src/app/components/pageConfigs/header/header.component.html
+++ b/src/app/components/pageConfigs/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header class="header">
+    <section class="logo">
+      <div class="logo-text">Concas<span class="destaquePay">Pay</span></div>
+    </section>
+    <ng-content select="[buttons]"></ng-content>
+    <!-- <button class="btn">Entrar</button> -->
+</header>
