--- a/src/app/pages/default/default.component.html
+++ b/src/app/pages/default/default.component.html
@@ -1,1 +1,13 @@
-<p>default works!</p>
+<app-header>
+    <section buttons>
+        <button class="btn">Entrar</button>
+    </section>
+</app-header>
+
+<app-body>
+
+</app-body>
+
+<app-footer>
+
+</app-footer>
