--- a/src/app/pages/default/default.component.html
+++ b/src/app/pages/default/default.component.html
@@ -1,13 +1,17 @@
+<!-- created connection with header -->
 <app-header>
+    <!-- added button to the 'buttons' location -->
     <section buttons>
         <button class="btn">Entrar</button>
     </section>
 </app-header>
 
+<!-- connection with body component -->
 <app-body>
 
 </app-body>
 
+<!-- connection with footer component -->
 <app-footer>
 
 </app-footer>
