feito config de conexao entre componentes

--- a/src/app/components/pageConfigs/body/body.component.html
+++ b/src/app/components/pageConfigs/body/body.component.html
@@ -1,5 +1,5 @@
 <main class="main">
-    <section class="container">
+    <ng-content select="[container]">
         
-    </section>
+    </ng-content>
 </main>
