--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <app-default>
     <!-- added button to be projected -->
     <section class="content" buttons>
-        <button class="btn">Entrar</button>
+        <button class="btn btn-secondary btn-header">ENTRAR</button>
     </section>
 
     <section container>
