feat: Altera texto de apresentação

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,10 +5,8 @@
     </section>
 
     <section container>
-        <h1>ConcasPay</h1>
-        <p>ConcasPay é uma plataforma de pagamentos online que permite a você realizar pagamentos de forma rápida e segura.</p>
-        <p>Com ConcasPay você pode realizar pagamentos de contas, boletos, recarregar seu celular e muito mais.</p>
-        <p>ConcasPay é a solução para você que deseja realizar pagamentos de forma rápida e segura.</p>
+        <p>Bem-vindo ao nosso novo banco, onde seu futuro financeiro é nossa prioridade.</p>
+        <p>Estamos aqui para oferecer soluções inovadoras e serviços de excelência para atender às suas necessidades.</p>
     </section>
 </app-default>
 
