styles: Inclui classes para destacar textos

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -58,3 +58,11 @@ $white-color: #fffffa;
         border-color: var(--secondary-color);
     }
 }
+
+.text-primary {
+    color: var(--secondary-color);
+}
+
+.text-secondary {
+    color: var(--white-color);
+}
