--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,9 +4,9 @@
         <button class="btn btn-secondary btn-header">ENTRAR</button>
     </section>
 
-    <section container>
-        <p>Bem-vindo ao nosso novo banco, onde seu futuro financeiro é nossa prioridade.</p>
-        <p>Estamos aqui para oferecer soluções inovadoras e serviços de excelência para atender às suas necessidades.</p>
+    <section container class="text-secondary">
+        <p>Bem-vindo ao nosso novo <span class="text-primary"> banco</span>, onde <span class="text-primary">seu futuro</span> financeiro é <span class="text-primary">nossa prioridade</span>.</p>
+        <p>Estamos aqui para <span class="text-primary">oferecer</span> soluções inovadoras e serviços de excelência para <span class="text-primary">atender</span> às suas necessidades.</p>
     </section>
 </app-default>
 
