--- a/src/app/components/pageConfigs/body/body.component.scss
+++ b/src/app/components/pageConfigs/body/body.component.scss
@@ -1,4 +1,8 @@
 .main {
     height: 80vh;
     background-color: var(--primary-color);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
