feat:criação da pagina cadastro e estilo, falta icones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
+
+<app-cadastro></app-cadastro>
 <!-- SHOW ROUTE CONTENTS -->
-<router-outlet></router-outlet> 
+<!-- <router-outlet></router-outlet>  -->
