--- a/src/app/components/pageConfigs/header/header.component.html
+++ b/src/app/components/pageConfigs/header/header.component.html
@@ -2,6 +2,6 @@
     <section class="logo">
       <div class="logo-text">Concas<span class="destaquePay">Pay</span></div>
     </section>
-    <ng-content select="[buttons]"></ng-content>
+    <ng-content class="btn" select="[buttons]"></ng-content>
     <!-- <button class="btn">Entrar</button> -->
 </header>
