refactor: botão redirecionando para a tela de login

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <app-default>
     <!-- added button to be projected -->
     <section class="content" buttons>
-        <button class="btn btn-secondary btn-header">ENTRAR</button>
+        <button class="btn btn-secondary btn-header" (click)="redirectToLogin()">ENTRAR</button>
     </section>
 
     <section container class="container">
