--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -1,5 +1,17 @@
 <form>
     <div class="form-group">
-        <input type="email" class="form-control" id="email" placeholder="" required>
+        <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+    </div>
+    <div class="form-group">
+        <input type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
+    </div>
+    <div class="other-data-form-group">
+        <div class="checkbox-container">
+            <!-- checkbox -->
+            <input type="checkbox" class="custom-control-input" id="rememberMe">
+            <label class="custom-control-label" for="rememberMe">Lembrar-me</label>
+        </div>
+        <!-- link -->
+        <a href="#" class="forgot-password">Esqueci minha senha</a>
     </div>
 </form>
