--- a/src/app/components/forms/login-form/login-form.component.scss
+++ b/src/app/components/forms/login-form/login-form.component.scss
@@ -1,5 +1,15 @@
-.form-group{
+.forgot-password {
+    text-decoration: none;
+    text-align: right;
+}
+.forgot-password a:hover {
+    text-decoration: underline;
+}
+
+.other-data-form-group {
     display: flex;
-    flex-direction: column;
-    
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
 }
