--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -1,20 +1,20 @@
 <form class="form">
     <div class="form-group">
         <fa-icon class="icon" [icon]="envelope" style="color: #daa520;"></fa-icon>
-        <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+        <input type="email" class="form-control" id="email" placeholder="Digite seu email" required>
     </div>
     <div class="form-group password-field">
         <input type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
         <fa-icon class="icon" [icon]="lock" style="color: #daa520;"></fa-icon>
-        <fa-icon class="icon to-end" [icon]="eye" style="color: #daa520;"></fa-icon>
     </div>
     <div class="other-data-form-group">
         <div class="checkbox-container">
             <!-- checkbox -->
-            <input type="checkbox" class="custom-control-input" id="rememberMe">
-            <label class="custom-control-label" for="rememberMe">Lembrar-me</label>
+            <input type="checkbox" class="checkbox" id="rememberMe">
+            <label class="label" for="rememberMe">Lembrar-me</label>
         </div>
         <!-- link -->
         <a href="#" class="forgot-password">Esqueci minha senha</a>
     </div>
+        <button type="submit" class="btn btn-primary">Entrar</button>
 </form>
