--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -31,12 +31,6 @@
     box-shadow: 0 0 0 0.1rem var(--secondary-color, 0.1rem);
 }
 
-
-.custom-control-label {
-    color: var(--white-color);
-    margin-left: 0.3rem;
-}
-
 .form {
     display: flex;
     flex-direction: column;
@@ -50,6 +44,49 @@
     align-items: center;
     align-content: center;
     justify-content: space-between;
+    text-align: center;
+    text-justify: center;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.checkbox {
+    display: none;
+}
+
+.checkbox + label {
+    position: relative;
+    padding-left: 1.3rem;
+    cursor: pointer;
+    font-size: 0.9rem;
+}
+
+.checkbox + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 1rem;
+    height: 1rem;
+    border: 0.1rem solid var(--secondary-color);
+    border-radius: 0.2rem;
+}
+
+.checkbox:checked + label:after {
+    content: '';
+    position: absolute;
+    left: 0.39rem;
+    top: 0.15rem;
+    width: 0.3rem;
+    height: 0.6rem;
+    border: solid var(--secondary-color);
+    border-width: 0 0.12rem 0.12rem 0;
+    transform: rotate(45deg);
+}
+
+.label{
+    color: var(--white-color);
+    margin-left: 0.2rem;
 }
 
 @media screen and (max-width: 400px){
