feat: adicionado validacao do form

--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form class="form">
+<form class="form" [formGroup]="form">
     <div class="form-group">
         <fa-icon class="icon" [icon]="envelope" style="color: #daa520;"></fa-icon>
         <input type="email" class="form-control" id="email" placeholder="Digite seu email" required>
