--- a/src/app/components/forms/login-form/login-form.component.scss
+++ b/src/app/components/forms/login-form/login-form.component.scss
@@ -1,12 +1,3 @@
-.forgot-password {
-    text-decoration: none;
-    text-align: right;
-}
-.forgot-password a:hover {
-    text-decoration: underline;
-}
-
-
 .icon {
     position: absolute;
     display: flex;
@@ -23,4 +14,16 @@
     justify-self: end;
     align-self: center;
     right: auto;
+}
+
+.forgot-password {
+    color: var(--white-color);
+    text-decoration: none;
+    text-align: right;
+    transition: ease-in 0.2s;
+}
+.forgot-password:hover {
+    color: var(--secondary-color);
+    text-decoration: none;
+    transform: scale(1.007);
 }
