--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 
-<app-cadastro></app-cadastro>
 <!-- SHOW ROUTE CONTENTS -->
-<!-- <router-outlet></router-outlet>  -->
+<router-outlet></router-outlet>
