--- a/src/app/components/pageConfigs/header/header.component.scss
+++ b/src/app/components/pageConfigs/header/header.component.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #daa520; /* Dourado */
-    padding: 30px 20px;
+    padding: .875rem;
 }
 
 .logo {
@@ -20,4 +20,14 @@
 
 .destaquePay {
     color: white;
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 1.5rem;
+    }
+
+    .logo {
+        margin: auto;
+    }
 }
