fix: resolvido bug de redirecionamento inifinito

--- a/src/app/pages/recover-password/recover-password.component.html
+++ b/src/app/pages/recover-password/recover-password.component.html
@@ -1,19 +1,24 @@
-<app-recover-password>
-  <form (submit)="onSubmit()">
-    <div class="container">
-      <div class="prompt" *ngIf="!emailSent">
-        <p>Digite seu e-mail cadastrado</p>
+<app-header>
+</app-header>
+
+<app-body>
+  <div container>
+    <form (submit)="onSubmit()">
+      <div class="container">
+        <div class="prompt" *ngIf="!emailSent">
+          <p>Digite seu e-mail cadastrado</p>
+        </div>
+        <div class="input" *ngIf="!emailSent">
+          <input type="email" name="email" [(ngModel)]="emailValue" required placeholder="Digite seu e-mail">
+        </div>
+        <div class="buttons" *ngIf="!emailSent">
+          <button type="submit" [disabled]="!emailValue || !emailValue.trim()">ENVIAR</button>
+          <button type="button">VOLTAR</button>
+        </div>
+        <div class="message" *ngIf="emailSent">
+          <p>{{ message }}</p>
+        </div>
       </div>
-      <div class="input" *ngIf="!emailSent">
-        <input type="email" name="email" [(ngModel)]="emailValue" required placeholder="Digite seu e-mail">
-      </div>
-      <div class="buttons" *ngIf="!emailSent">
-        <button type="submit" [disabled]="!emailValue || !emailValue.trim()">ENVIAR</button>
-        <button type="button">VOLTAR</button>
-      </div>
-      <div class="message" *ngIf="emailSent">
-        <p>{{ message }}</p>
-      </div>
-    </div>
-  </form>
-</app-recover-password>
+    </form>
+  </div>
+</app-body>
