refactor: adicionado redirecinamento para tela de recuperacao de senha

--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -14,7 +14,7 @@
             <label class="label" for="rememberMe">Lembrar-me</label>
         </div>
         <!-- link -->
-        <a href="#" class="forgot-password">Esqueci minha senha</a>
+        <a (click)="redirectRecoverPassword()" class="forgot-password">Esqueci minha senha</a>
     </div>
         <button type="submit" class="btn btn-primary">Entrar</button>
 </form>
