--- a/src/app/pages/recover-password/recover-password.component.html
+++ b/src/app/pages/recover-password/recover-password.component.html
@@ -4,21 +4,20 @@
 <app-body>
   <div container>
     <form (submit)="onSubmit()">
-      <div class="container">
-        <div class="prompt" *ngIf="!emailSent">
+        <!-- <div class="prompt" *ngIf="!emailSent">
           <p>Digite seu e-mail cadastrado</p>
-        </div>
-        <div class="input" *ngIf="!emailSent">
-          <input type="email" name="email" [(ngModel)]="emailValue" required placeholder="Digite seu e-mail">
+        </div> -->
+        <div class="form-group">
+            <fa-icon class="icon" [icon]="envelope" style="color: #daa520;"></fa-icon>
+            <input class="form-control" type="email" name="email" [(ngModel)]="emailValue" required placeholder="Digite seu e-mail cadastrado">
         </div>
         <div class="buttons" *ngIf="!emailSent">
-          <button type="submit" [disabled]="!emailValue || !emailValue.trim()">ENVIAR</button>
-          <button type="button">VOLTAR</button>
+          <button class="btn btn-primary m-1" type="submit" [disabled]="!emailValue || !emailValue.trim()">ENVIAR</button>
+          <button (click)="backBtn()" class="btn btn-secondary m-1" type="button">VOLTAR</button>
         </div>
         <div class="message" *ngIf="emailSent">
           <p>{{ message }}</p>
         </div>
-      </div>
     </form>
   </div>
 </app-body>
