--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -89,6 +89,15 @@
     margin-left: 0.2rem;
 }
 
+.icon {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
+    border-radius: 4px 0 0 4px;
+}
+
 @media screen and (max-width: 400px){
     .form-control {
         width: 100%;
