fix: corrigido css

--- a/src/app/pages/recover-password/recover-password.component.html
+++ b/src/app/pages/recover-password/recover-password.component.html
@@ -1,7 +1,7 @@
 <app-header>
 </app-header>
 
-<app-body>
+<app-body class="main">
   <div container>
     <form (submit)="onSubmit()">
         <!-- <div class="prompt" *ngIf="!emailSent">
