--- a/src/app/pages/recover-password/recover-password.component.scss
+++ b/src/app/pages/recover-password/recover-password.component.scss
@@ -10,9 +10,10 @@
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: 90vh;
+    background-color: var(--primary-color);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
