--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -1,10 +1,10 @@
 <form class="form" [formGroup]="form">
     <div class="form-group">
         <fa-icon class="icon" [icon]="envelope" style="color: #daa520;"></fa-icon>
-        <input type="email" class="form-control" id="email" placeholder="Digite seu email" required>
+        <input formControlName="email" type="email" class="form-control" id="email" placeholder="Digite seu email" required>
     </div>
     <div class="form-group password-field">
-        <input type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
+        <input formControlName="password" type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
         <fa-icon class="icon" [icon]="lock" style="color: #daa520;"></fa-icon>
     </div>
     <div class="other-data-form-group">
@@ -16,5 +16,5 @@
         <!-- link -->
         <a (click)="redirectRecoverPassword()" class="forgot-password">Esqueci minha senha</a>
     </div>
-        <button type="submit" class="btn btn-primary">Entrar</button>
+        <button type="submit" class="btn btn-primary" (click)="onSubmit()">Entrar</button>
 </form>
