refactor: adicionado redirecionamento

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <app-header>
     <section buttons>
-        <button class="btn btn-secondary">Registrar</button>
+        <button class="btn btn-secondary" (click)="redirectToRegister()">Registrar</button>
     </section>
 </app-header>
 
