VERIFICAR ****Mudanças no componente header****, adicionada a foto do perfil e a saudação com o nome.

--- a/src/app/components/pageConfigs/header/header.component.html
+++ b/src/app/components/pageConfigs/header/header.component.html
@@ -2,5 +2,5 @@
     <section class="logo">
       <div class="logo-text">Concas<span class="destaquePay">Pay</span></div>
     </section>
-    <ng-content class="btn" select="[buttons]"></ng-content>
+    <ng-content class="btn" select="[buttons], [welcome]"></ng-content>
 </header>
