--- a/src/app/pages/cartoes/cartoes.component.html
+++ b/src/app/pages/cartoes/cartoes.component.html
@@ -1,11 +1,13 @@
 <app-header>
-    <section class="content">
-        <div class="text-container">
-            <h1>Boa noite, Adriana</h1>
-            <p>Seja bem-vinda a sua ConcasPay</p>
-        </div>
-        <div class="image-container">
-            <img src="../../../assets/home-images/home-preview-app.png" alt="">
+    <section welcome>
+        <div class="welcome-perfil">
+            <div>
+                <img class="img-perfil" src="../../../assets/perfil.png" alt="Imagem de boas-vindas">
+            </div>
+            <div class="welcomePhraseContainer">
+                <p class="welcome-paragraph">Boa noite,</p>
+                <h1 class="welcome-name">Adriana</h1>
+            </div>
         </div>
     </section>
 </app-header>
