--- a/src/app/components/forms/login-form/login-form.component.scss
+++ b/src/app/components/forms/login-form/login-form.component.scss
@@ -18,3 +18,9 @@
     text-decoration: none;
     transform: scale(1.007);
 }
+
+.invalid-login {
+    color: var(--white-color);
+    text-align: center;
+    margin-bottom: 0.2rem;
+}
