style: criado titulo e estilizacao para o mesmo

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,10 +4,14 @@
     </section>
 </app-header>
 
-<app-body class="main">
-    <section container>
-        <app-login-form>
 
+<app-body class="main">
+    
+    <section container>
+        <section title class="logo-section">
+            <div class="logo-text">Concas<span class="destaquePay">Pay</span></div>
+        </section>
+        <app-login-form>
         </app-login-form>
     </section>
 </app-body>
