refactor: rota de redirecionamento para registro

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
             <p>Bem-vindo ao nosso novo <span class="text-primary"> banco</span>, onde <span class="text-primary">seu futuro</span> financeiro é <span class="text-primary">nossa prioridade</span>.</p>
             <p>Estamos aqui para <span class="text-primary">oferecer</span> soluções inovadoras e serviços de excelência para <span class="text-primary">atender</span> às suas necessidades.</p>
             <button class="btn btn-outline-primary btn-mobile btn-large">ENTRAR</button>
-            <button class="btn btn-primary btn-large">Abra a sua ConcasPay</button>
+            <button class="btn btn-primary btn-large" (click)="redirectToRegister()">Abra a sua ConcasPay</button>
         </div>
         <div class="image-container">
             <img src="../../../assets/home-images/home-preview-app.png" alt="">
