convertido para rem

--- a/src/app/pages/cartoes/cartoes.component.scss
+++ b/src/app/pages/cartoes/cartoes.component.scss
@@ -1,5 +1,5 @@
 .img-perfil {
-    width: 70px;
+    width: 4.375rem;
 }
 
 .welcome-perfil{
@@ -8,14 +8,14 @@
 }
 
 .welcomePhraseContainer {
-    margin-left: 5px;
+    margin-left: 0.313rem;
 }
 
 .welcome-paragraph {
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .welcome-name {
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: bold;
 }
