Inclusão de incones nos botes na Home

--- a/src/app/components/pageConfigs/footer/footer.component.scss
+++ b/src/app/components/pageConfigs/footer/footer.component.scss
@@ -1,9 +1,42 @@
+$footer-bg-color: var(--tertiary-color);
+$footer-height: 10vh;
+$footer-padding: .5rem 3rem;
+$footer-text-size: 1rem;
+$footer-text-small-size: .75rem;
+$footer-text-weight: 300;
+
 footer {
-    background-color: #2D2D35;
-    height: 10vh;
-    bottom: 0;
+  background-color: $footer-bg-color;
+  height: $footer-height;
+  bottom: 0;
+  padding: $footer-padding;
+
+  @media screen and (max-width: 768px) {
+    text-align: center;
+  }
 }
-  
-.color-primary {
-    color: #DAA520;
+
+.footer-left {
+  display: flex;
+  height: 100%;
+
+  @media screen and (max-width: 768px) {
+    justify-content: center;
+  }
+}
+
+.footer-image {
+  height: 100%;
+  width: auto;
+  margin-right: .5rem;
+}
+
+.footer-text {
+  font-size: $footer-text-size;
+  align-self: center;
+
+  span {
+    font-size: $footer-text-small-size;
+    font-weight: $footer-text-weight;
+  }
 }
