--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -50,7 +50,7 @@
         }
         
         .btn-mobile {
-            display: block;
+            display: flex;
             margin-bottom: .5rem;
         }
         
