--- a/src/app/components/pageConfigs/footer/footer.component.html
+++ b/src/app/components/pageConfigs/footer/footer.component.html
@@ -1,11 +1,11 @@
-<footer class="d-flex justify-content-between pe-3 ps-3">
-    <div class="d-flex align-items-center gap-3">
-      <img src="../../../assets/Logo - Vazia.png" alt="" />
-      <p class="color-primary w-50">
-        Concatenados Enterprise Todos os Direitos Reservados &copy;
+<footer class="footer">
+    <div class="footer-left">
+      <img class="footer-image" src="../../../../assets/footer-images/concatenados-logo.svg" alt="" />
+      <p class="footer-text text-primary">
+        Concatenados Enterprise<br><span>Todos os Direitos Reservados &copy;</span>
       </p>
     </div>
-    <div class="color-primary d-flex gap-5 align-items-center fs-2">
+    <div class="footer-right d-flex gap-5 align-items-center fs-2">
       <i class="bi bi-instagram"></i>
       <i class="bi bi-facebook"></i>
       <i class="bi bi-linkedin"></i>
