--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,14 +26,26 @@ img {
 // --- Botões ---
 
 .btn {
+    display: flex;
     height: 3rem;
-    padding: 0.3125rem 1.75rem;    
+    // padding: 0.3125rem 1.75rem;    
+    padding: 0 1rem;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
     font-size: 1.125rem;
     border-radius: 0.625rem;
     cursor: pointer;
     letter-spacing: 0.0625rem;
     border: 1px solid transparent;
+
+
     transition: 0.2s;
+
+    .icon {
+        position: relative;
+        padding: 0;
+    }
 
     &:hover {
         filter: brightness(115%); 
