Corrige placeholder do campo data de Nascimento

--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -4,6 +4,14 @@
     align-items: center;
     align-content: center;
     margin-bottom: 0.6rem;
+
+    .icon {
+        color: var(--secondary-color);
+    }
+
+    input[type="date"]::-webkit-calendar-picker-indicator {
+        display: none;
+    }
 }
 
 .form-control {
