--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -5,38 +5,38 @@
     <div class="container">
     <form>
       <div class="form-group">
-        <fa-icon class="icon" [icon]="envelope" style="color: #daa520;"></fa-icon>
+        <fa-icon class="icon" [icon]="envelope"></fa-icon>
         <input formControlName="email" type="email" class="form-control" id="email" placeholder="Digite seu email" required>
       </div>
       <div class="form-group">
         <label for="nome"></label>
-        <fa-icon class="icon" [icon]="user" style="color: #daa520;"></fa-icon>
+        <fa-icon class="icon" [icon]="user"></fa-icon>
         <input class="form-control" type="text" id="nome" name="nome" placeholder="Informe o Nome Completo" required />
       </div>
     
       <div class="form-group">
         <label for="cpf"></label>
         <input class="form-control" type="text" id="cpf" name="cpf" placeholder="Informe o CPF" required />
-        <fa-icon class="icon" [icon]="adressCard" style="color: #daa520;"></fa-icon>
+        <fa-icon class="icon" [icon]="adressCard"></fa-icon>
       </div>
       
       <div class="form-group">
         <label for="email"></label>
         <input class="form-control form-control" type="email" id="email" name="email" placeholder="Informe o E-mail" required />
-        <fa-icon class="icon" [icon]="envelope" style="color: #daa520;"></fa-icon>
+        <fa-icon class="icon" [icon]="envelope"></fa-icon>
       </div>
     
       
       <div class="form-group">
         <label for="telefone"></label>
         <input class="form-control" type="tel" id="telefone" name="telefone" placeholder="Informe seu Número Celular (com DDD)" required />
-        <fa-icon class="icon" [icon]="phone" style="color: #daa520;"></fa-icon>
+        <fa-icon class="icon" [icon]="phone"></fa-icon>
       </div>
     
       <div class="form-group">
         <label for="dataNascimento"></label>
-        <input class="form-control" type="date" id="dataNascimento" name="dataNascimento" placeholder="Informe a Data de Nascimento" required />
-        <fa-icon class="icon" [icon]="calendar" style="color: #daa520;"></fa-icon>
+        <input class="form-control" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="dataNascimento" name="dataNascimento" placeholder="Informe a Data de Nascimento" required />
+        <fa-icon class="icon" [icon]="calendar"></fa-icon>
       </div>
     
       <button class="btn" type="submit">Registrar</button>
