--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -3,7 +3,7 @@
     <h2>Abra sua conta <span class="text-primary">Concas</span>Pay</h2>
     
     <div class="container">
-    <form>
+    <form class="form">
       <div class="form-group">
         <fa-icon class="icon" [icon]="envelope"></fa-icon>
         <input formControlName="email" type="email" class="form-control" id="email" placeholder="Digite seu email" required>
@@ -37,6 +37,16 @@
         <label for="dataNascimento"></label>
         <input class="form-control" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="dataNascimento" name="dataNascimento" placeholder="Informe a Data de Nascimento" required />
         <fa-icon class="icon" [icon]="calendar"></fa-icon>
+      </div>
+
+      <div class="form-group password-field">
+        <input formControlName="password" type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
+        <fa-icon class="icon" [icon]="lock" style="color: #daa520;"></fa-icon>
+      </div>
+
+      <div class="form-group password-field">
+        <input formControlName="password" type="password" class="form-control" id="password" placeholder="Confirme sua senha" required>
+        <fa-icon class="icon" [icon]="lock" style="color: #daa520;"></fa-icon>
       </div>
     
       <button class="btn" type="submit">Registrar</button>
