--- a/src/app/pages/cartoes/cartoes.component.html
+++ b/src/app/pages/cartoes/cartoes.component.html
@@ -2,7 +2,7 @@
   <section welcome>
     <div class="welcome-perfil">
       <div>
-        <img class="img-perfil" src="../../../assets/perfil.png" alt="Imagem de boas-vindas">
+        <img class="img-perfil" src="../../../assets/foto-cartao.png" alt="Imagem de boas-vindas">
       </div>
       <div>
         <h2 class="welcome-paragraph">{{ saudacao }}</h2>
@@ -12,19 +12,44 @@
 </app-header>
 
 <app-body>
-  <section container>
-    <div class="welcomePhraseContainer">
-      <div>
-        <img class="img-cartao" src="../../../assets/virtualCardConcas.png" alt="Imagem do cartão">
+  <section id="section" container>
+    <div class="app">
+      <div class="data">
+        <div class="wrapper">
+          <p class="limit">Limite</p>
+          <span>{{ limite }}</span>
+        </div>
+
+        <div class="wrapper">
+          <p>Número do Cartão</p>
+          <span id="card-number">{{ numero }}</span>
+        </div>
+
+        <div class="wrapper">
+          <p>Nome</p>
+          <span id="card-holder">{{ nomeCartao }}</span>
+        </div>
+        <div class="flex">
+          <div class="wrapper">
+            <p>Validade</p>
+            <span id="expiration-date">{{ validade }}</span>
+          </div>
+
+          <div class="wrapper">
+            <p>CVC</p>
+            <span id="security-code">{{ cvc }}</span>
+          </div>
+        </div>
+
       </div>
       <div>
-        <button type="submit">Bloquear Cartão</button>
+        <div>
+          <img class="img-cartao" src="../../../assets/concaspay2.png" alt="Imagem do cartão">
+        </div>
+        <div>
+          <button type="submit">Bloquear Cartão</button>
+        </div>
       </div>
-      <h2 class="welcome-paragraph">Limite: {{ limite }}</h2>
-      <p class="welcome-name">Número do Cartão: {{ numero }}</p>
-        <p class="welcome-name">Nome: {{ nomeCartao }}</p>
-        <p class="welcome-name">Validade: {{ validade }}</p>
-        <p class="welcome-name">CVC: {{ cvc }}</p>
     </div>
   </section>
 </app-body>
