refactor: integracao com componente de listagem

--- a/src/app/pages/logged-home/logged-home.component.html
+++ b/src/app/pages/logged-home/logged-home.component.html
@@ -1,1 +1,7 @@
-<p>logged-home works!</p>
+<app-default>
+    <section container>
+        <app-bank-statements-list>
+            
+        </app-bank-statements-list>
+    </section>
+</app-default>
