--- a/src/app/pages/bank-statements/bank-statements.component.html
+++ b/src/app/pages/bank-statements/bank-statements.component.html
@@ -1,7 +1,7 @@
 <app-header>
 
 </app-header>
-<app-body>
+<app-body class="main">
   <section container>
     <div class="container d-flex justify-content-center align-items-center">
       <div>
