--- a/src/app/pages/bank-statements/bank-statements.component.scss
+++ b/src/app/pages/bank-statements/bank-statements.component.scss
@@ -1,3 +1,12 @@
+.main {
+  height: 90vh;
+  background-color: var(--primary-color);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .movimentacoes-list tr {
   border-bottom: 1px solid black;
 }
