--- a/src/app/pages/cartoes/cartoes.component.scss
+++ b/src/app/pages/cartoes/cartoes.component.scss
@@ -9,60 +9,58 @@
 }
 
 .data {
+  text-align: left;
+  width: 50%;
   max-width: 40rem;
   display: grid;
   gap: 1.6rem;
 }
 
 #section {
+  // position: absolute;
+  // top: 1rem;
   font-size: 1.6rem;
-
   display: flex;
   place-items: center;
-
   min-height: 100vh;
 }
 
 .app {
   display: flex;
   justify-content: center;
-  gap: 3.2rem;
-
+  gap: 1.6rem;
   width: 90%;
   max-width: 80rem;
   margin: 0 auto;
-
   padding: 2.8rem 6rem 4rem;
-  // background: #202024;
-  border: 0.1rem solid var(--secondary-color);
   border-radius: 0.6rem;
 }
 
 .wrapper {
   display: grid;
-  gap: 0.6rem;
+
+  p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    letter-spacing: 0.01px;
+    color: var(--secondary-color);
+    font-weight: 100;
+    font-size: 0.75;
+  }
+
+  span {
+    font-weight: 900;
+    text-align: left;
+
+    height: 1.875rem;
+    // padding-inline: 3.6rem;
+    width: 100%;
+    color: var(--secondary-color);
+  }
 }
 
-p {
-  font-weight: 600;
-  font-size: 1.2rem;
-  line-height: 1.5rem;
-  letter-spacing: 0.01px;
-  text-transform: uppercase;
-  color: var(--secondary-color);
-}
-
-span {
-  background: #121214;
-  border: 1px solid var(--secondary-color);
-  border-radius: 6px;
-  height: 30px;
-  padding-inline: 3.6rem;
-
-  width: 100%;
-
-  color: var(--secondary-color);
-  text-transform: uppercase;
+.img-perfil {
+  object-fit: cover;
 }
 
 .flex {
@@ -74,30 +72,38 @@ span {
   flex: 1;
 }
 
-button {
-  margin-top: 1.6rem;
-
+.cartao {
   display: flex;
-  justify-content: center;
+  width: 50%;
+  flex-direction: column;
   align-items: center;
-  padding: 1rem;
-  margin-left: 9rem;
-
-  background: var(--white-color);
-  border-radius: 0.6rem;
-
-  cursor: pointer;
-
-  border: none;
-
-  font-weight: 700;
-  font-size: 1.4rem;
-  line-height: 1.7rem;
-  color: #121212;
-
-  transition: filter 0.3s;
 }
 
-button:hover {
-  filter: brightness(1.1);
+
+@media screen and (max-width: 768px) {
+
+  #section {
+    position: relative;
+    width: 100%;
+    top: 0;
+  }
+
+  .app {
+    display: flex;
+    flex-direction: column-reverse;
+    max-width: 100%;
+    padding: 1rem;
+    margin: 0;
+    font-size: 75%;
+    gap:.5rem;
+
+    .data {
+      width: 100%;
+      gap: .5rem;
+    }
+
+    .cartao {
+      width: 100%;
+    }
+  }
 }
