--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,8 +8,8 @@
 <app-body class="main">
     
     <section container>
-        <section title class="logo-section">
-            <div class="logo-text">Concas<span class="destaquePay">Pay</span></div>
+        <section title class="mx-auto ms-lg-1">
+            <p class="text-light fs-1 fw-bolder mb-0">Concas<span class="text-primary">Pay</span></p>
         </section>
         <app-login-form>
         </app-login-form>
