--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -3,12 +3,12 @@
         Email e/ou senha incorretos
     </span>
     <div class="form-group">
-        <fa-icon class="icon" [icon]="envelope" style="color: #daa520;"></fa-icon>
+        <fa-icon class="icon" [icon]="envelope"></fa-icon>
         <input formControlName="email" type="email" class="form-control" id="email" placeholder="Digite seu email" required>
     </div>
     <div class="form-group password-field">
         <input formControlName="password" type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
-        <fa-icon class="icon" [icon]="lock" style="color: #daa520;"></fa-icon>
+        <fa-icon class="icon" [icon]="lock"></fa-icon>
     </div>
     <div class="other-data-form-group">
         <div class="checkbox-container">
