--- a/src/app/components/pageConfigs/footer/footer.component.html
+++ b/src/app/components/pageConfigs/footer/footer.component.html
@@ -1,13 +1,16 @@
-<footer class="footer">
-    <div class="footer-left">
-      <img class="footer-image" src="../../../../assets/footer-images/concatenados-logo.svg" alt="" />
-      <p class="footer-text text-primary">
-        Concatenados Enterprise<br><span>Todos os Direitos Reservados &copy;</span>
-      </p>
-    </div>
-    <div class="footer-right d-flex gap-5 align-items-center fs-2">
-      <i class="bi bi-instagram"></i>
-      <i class="bi bi-facebook"></i>
-      <i class="bi bi-linkedin"></i>
-    </div>
+<footer class="d-flex flex-column col-12 align-items-center flex-sm-row position-absolute bottom-0 justify-content-between px-4 py-3">
+  <div class="d-flex text-primary my-1">
+    <img src="../../../../assets/footer-images/concatenados-logo.svg" alt="" />
+    <div>
+      <small class="d-flex small ms-2">
+        Concatenados Enterprise <br>
+        Todos os Direitos Reservados
+      </small>
+    </div>      
+  </div>
+  <div class="d-flex gap-3 fs-4">
+    <i class="bi bi-instagram"></i>
+    <i class="bi bi-facebook"></i>
+    <i class="bi bi-linkedin"></i>
+  </div>
 </footer>
