--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,88 +1,1 @@
-// project colors
-$primary-color: #1a1a1d;
-$secondary-color: #daa520;
-$tertiary-color: #2d2d35;
-$white-color: #fffffa;
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-}
-
-img {
-    width: 100%;
-}
-
-
-:root {
-    --primary-color: #{$primary-color};
-    --secondary-color: #{$secondary-color};
-    --tertiary-color: #{$tertiary-color};
-    --white-color: #{$white-color};
-}
-
-// --- Botões ---
-
-.btn {
-    display: flex;
-    height: 3rem;
-    // padding: 0.3125rem 1.75rem;    
-    padding: 0 1rem;
-    gap: 1rem;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.125rem;
-    border-radius: 0.625rem;
-    cursor: pointer;
-    letter-spacing: 0.0625rem;
-    border: 1px solid transparent;
-
-
-    transition: 0.2s;
-
-    .icon {
-        position: relative;
-        padding: 0;
-    }
-
-    &:hover {
-        filter: brightness(115%); 
-    }
-
-    &::content {
-        filter: none;
-    }
-
-    &-primary {
-        color: var(--primary-color);
-        background-color: var(--secondary-color);
-        border: var(--secondary-color);
-    }
-
-    &-secondary {
-        color: var(--secondary-color);
-        background-color: var(--primary-color);
-        border: var(--primary-color);
-    }
-
-    &-outline-primary {
-        color: var(--secondary-color);
-        background-color: transparent;
-        background-image: none;
-        border-color: var(--secondary-color);
-    }
-
-    &-large {
-        width: 16.5rem;
-    }
-}
-
-.text-primary {
-    color: var(--secondary-color);
-}
-
-.text-secondary {
-    color: var(--white-color);
-}
+@import 'custom-bootstrap.scss';
