--- a/src/app/pages/cartoes/cartoes.component.html
+++ b/src/app/pages/cartoes/cartoes.component.html
@@ -1,14 +1,12 @@
 <app-header>
   <section welcome>
-    <div class="dropdown welcome-perfil">
+    <div class="welcome-perfil">
+      <div class="relative cursor-img-logout" (click)="toggleDropdown()"><img class="img-perfil" src="../../../assets/foto-cartao.png" alt="Imagem de boas-vindas"></div>
+      <div class="absolute" *ngIf="showDropdown" aria-labelledby="dropdownMenuButton">
+        <a class="text-black dropdown-item pe-4 fw-bold" href="#" (click)="logout()">Logout</a>
+      </div>      
       <div>
-        <img class="img-perfil dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="../../../assets/foto-cartao.png" alt="Imagem de boas-vindas">
-      </div>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#" (click)="logout()">Logout</a>
-      </div>
-      <div>
-        <h2 class="welcome-paragraph">{{ saudacao }}</h2>
+        <h2 class="welcome-paragraph text-black fs-5 m-0">{{ saudacao }}</h2>
       </div>
     </div>
   </section>
@@ -57,3 +55,26 @@
   </section>
 </app-body>
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
