Mudanças na página home, adição de botões pix, deposito, transferencia e iniciando criação das páginas para esses botões

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -21,13 +21,6 @@
       </div>
       
       <div class="form-group">
-        <label for="email"></label>
-        <input class="form-control form-control" type="email" id="email" name="email" placeholder="Informe o E-mail" required />
-        <fa-icon class="icon" [icon]="envelope"></fa-icon>
-      </div>
-    
-      
-      <div class="form-group">
         <label for="telefone"></label>
         <input class="form-control" type="tel" id="telefone" name="telefone" placeholder="Informe seu Número Celular (com DDD)" required />
         <fa-icon class="icon" [icon]="phone"></fa-icon>
@@ -49,8 +42,8 @@
         <fa-icon class="icon" [icon]="lock" style="color: #daa520;"></fa-icon>
       </div>
     
-      <button class="btn" type="submit">Registrar</button>
-      <p class="text-secondary">Ao clicar em <span>Enviar</span> você aceita os <span class="text-primary"><u>Termos de Uso</u></span> e declara que leu e está ciente da <span class="text-primary"><u>Política de Privacidade.</u></span></p>
+      <button class="btn border-primary" type="submit">Registrar</button>
+      <p class="text-primary">Ao clicar em <span>Enviar</span> você aceita os <span class="text-white"><u>Termos de Uso</u></span> e declara que leu e está ciente da <span class="text-white"><u>Política de Privacidade.</u></span></p>
     </form>
 </div>
 </main>
