--- a/src/app/components/listComponents/bank-statements-list/bank-statements-list.component.html
+++ b/src/app/components/listComponents/bank-statements-list/bank-statements-list.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h2 class="fs-2 mb-4">Últimas Movimentações</h2>
     @for (statement of transactions.slice(0, bankStatementsLimit || transactions.length); track statement.date) {
         <section class="row">
             <p class="col">{{ statement.date || 'dd/MM/yyyy' }}</p>
