--- a/src/app/components/pageConfigs/body/body.component.scss
+++ b/src/app/components/pageConfigs/body/body.component.scss
@@ -1,5 +1,5 @@
 .main {
-    height: 90vh;
+    margin-top: 100px;
     background-color: var(--primary-color);
     text-align: center;
     display: flex;
