--- a/src/app/components/forms/login-form/login-form.component.scss
+++ b/src/app/components/forms/login-form/login-form.component.scss
@@ -12,6 +12,7 @@
     text-decoration: none;
     text-align: right;
     transition: ease-in 0.2s;
+    cursor: pointer;
 }
 .forgot-password:hover {
     color: var(--secondary-color);
