--- a/src/app/components/pageConfigs/header/header.component.html
+++ b/src/app/components/pageConfigs/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="d-flex flex-column flex-md-row align-items-center p-3 justify-content-between bg-primary ">
-  <section class="d-flex mx-0 ms-lg-1" (click)="redirectToHome()">
+  <section class="d-flex mx-0 ms-lg-1 cursor-pointer-all" (click)="redirectToHome()">
     <p class="text-dark text-center text-lg-left fs-2 fw-bolder mb-0">Concas<span class="text-light">Pay</span></p>
   </section>
   <ng-content class="btn" select="[buttons], [welcome]"></ng-content>
